Bug 362488 - "Restore Defaults" button in preferences not working
Summary: "Restore Defaults" button in preferences not working
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.0 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-30 01:49 UTC by zeusex81
Modified: 2016-05-05 14:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zeusex81 2016-04-30 01:49:20 UTC
It's not with all settings but with some of them the "Restore Defaults" button doesn't do its job.
I haven't tested all of them but for exemple it doesn't work with General settings.

Reproducible: Always

Steps to Reproduce:
1. Change cursor shape in general parameters
2. Click Restore Defaults button

Actual Results:  
Nothing happen.

Expected Results:  
The default cursor shape should be restored.
Comment 1 Dmitry Kazakov 2016-05-03 12:32:12 UTC
https://phabricator.kde.org/T2415
Comment 2 Dmitry Kazakov 2016-05-05 14:01:49 UTC
Git commit 1168cfb82b81ac802a63ef6bdf1f804a3db2ec71 by Dmitry Kazakov.
Committed on 05/05/2016 at 14:01.
Pushed by dkazakov into branch 'master'.

Fix restoring default on the general Settings tab

Fixes T2415

M  +1    -2    libs/ui/dialogs/kis_dlg_preferences.cc

http://commits.kde.org/krita/1168cfb82b81ac802a63ef6bdf1f804a3db2ec71