Fix restoring default on the general Settings tab

Fixes T2415
BUG:362488